# web-template-rs

./: .gitignore  Cargo.toml  README.md
crates/migration/: Cargo.toml  Makefile
crates/migration/src/: m20220101_000001_create_user_table.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240210_105733_user.rs  m20240210_110012_class.rs
src/: db.rs  main.rs  router.rs
src/entity/: class.rs  mod.rs  prelude.rs  user.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/pages/: login.tsx
web/src/pages/login/: index.tsx
web/src/store/: user.ts
