[package]
name = "web-template-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["migration"]

[dependencies]
migration = { path = "migration" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "*" }
tracing-subscriber = { version = "*" }
axum = { version = "*" }
sea-orm = { version = "1.0.0-rc.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
anyhow = "1"
dotenvy = { version = "0.15" }
